# earnings-analyst

./: .env  .env.example  ARCHITECTURE.md  README.md  local_test.py  patch_labels.py  pyproject.toml  upload_to_gcs.py
deployment/: csuite_prep_agent-0.1-py3-none-any.whl  deploy.py
intelligence_extractor/: __init__.py  agent.py  callbacks.py
intelligence_extractor/.adk/: session.db
intelligence_extractor/tools/: __init__.py  search_tools.py  storage_tools.py
phoenix/: __init__.py  agent.py  callbacks.py
phoenix/profiles/: mock_profiles.json
phoenix/sub_agents/: briefing_synthesizer.py  verification_agent.py
phoenix/tools/: document_tools.py  intelligence_store.py
