[tool.poetry]
name = "earnings-analyst"
version = "0.1"
license = "Apache-2.0"
description = "C-Suite Earnings Prep Agents via Google ADK + Vertex AI Search"
authors = ["Earnings Analyst"]
readme = "README.md"
packages = [
  {include = "phoenix"},
  {include = "intelligence_extractor"},
]

[tool.poetry.dependencies]
python = "^3.10"
google-adk = "^1.0.0"
google-genai = "^1.5.0"
google-cloud-discoveryengine = "^0.13.0"
google-cloud-storage = "^2.18.0"
pydantic = "^2.10.6"
google-cloud-aiplatform = { extras = [
  "adk",
  "agent-engines",
], version = "^1.93.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
